# nesstar-reader

./: .gitignore  LICENSE  README.md  ddi_metadata.py  nesstar_format.md  pyproject.toml
nesstar_reader/: __init__.py  binary.py  cli.py  exporter.py
nesstar_reader/binary_format/: __init__.py  constants.py  layout.py  types.py  utils.py
nesstar_reader/binary_format/decoders/: __init__.py  compact.py  huffman.py  text.py
nesstar_reader/binary_format/parsers/: __init__.py  descriptors.py  directory.py  embedded_metadata.py  resource_index.py
tests/: __init__.py  conftest.py  test_categorical_frequencies.py  test_embedded_metadata.py  test_exporter.py  test_layout.py  test_summary_stats.py
