[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "nesstar-reader"
version = "0.1.0"
description = "Open source extractor for NESSTAR/NSDstat data files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[project.scripts]
nesstar-reader = "nesstar_reader.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["nesstar_reader*"]
